# pmpjs

./: .gitignore  INSTALL.md  README.md  install.sh
js/: index.html  package.json  script.js  test.js
utils/: CMakeLists.txt  install.sh  package.json  rename.py  tsconfig.json
utils/documentation/: API.d.ts  biblio.ts  cite.ts  desc.ts  ex1.ts  ex2.ts  index.ts  lic.ts
utils/src/: CMakeLists.txt  bindings.cxx
